lipu-nasin-pona: use "kasi" for page/chapter
rather than "kipisi"

--- a/lipu-nasin-pona/12.md
+++ b/lipu-nasin-pona/12.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 12 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 12 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 11](11)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 13](13)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 11](11)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 13](13)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -20,7 +20,7 @@ sidebar:
 | 是以<wbr/>圣人为腹<wbr/>不为目 | o pali tan pilin, o pali ala tan lukin. | Therefore the sage acts from his gut, and not from his eyes.
 | 故<wbr/>去彼取此               | o weka e ona, o _anu_ e ni.             | He lets go of that and chooses this.
 
-{% include kipisi-nav.html num=12 %}
+{% include kasi-nav.html num=12 %}
 
 -------
 {:#sitelen}
