--- a/lipu-nasin-pona/13.md
+++ b/lipu-nasin-pona/13.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 13 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 13 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 12](12)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 14](14)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 12](12)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 14](14)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -26,7 +26,7 @@ sidebar:
 | 爱以身为天下   | sina olin e pali ni la: | If you love dedicating yourself in this way,
 | 若可託天下     | jan ale li olin e sina. | You can be entrusted with the world.
 
-{% include kipisi-nav.html num=13 %}
+{% include kasi-nav.html num=13 %}
 
 -------
 {:#sitelen}
