--- a/lipu-nasin-pona/14.md
+++ b/lipu-nasin-pona/14.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 14 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 14 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 13](13)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 15](15)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 13](13)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 15](15)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -33,7 +33,7 @@ sidebar:
 | 能知古始       | o sona e open majuna. | And know the primordial beginning.
 | 是谓道纪       | nimi ni li open pi sewi Nasin. | This is called the very beginning thread of the Way.
 
-{% include kipisi-nav.html num=14 %}
+{% include kasi-nav.html num=14 %}
 
 -------
 {:#sitelen}
