--- a/lipu-nasin-pona/16.md
+++ b/lipu-nasin-pona/16.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 16 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 16 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 15](15)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 17](17)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 15](15)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 17](17)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -29,7 +29,7 @@ sidebar:
 | 道乃久                   | sewi Nasin li tenpo ale.            | the Way is eternal.
 | 没身不殆                 | sijelo li moli la, jan li moli ala. | Though you lose the body, you do not die.
 
-{% include kipisi-nav.html num=16 %}
+{% include kasi-nav.html num=16 %}
 
 -------
 {:#sitelen}
