--- a/lipu-nasin-pona/17.md
+++ b/lipu-nasin-pona/17.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 17 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 17 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 16](16)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 18](18)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 16](16)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 18](18)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -21,7 +21,7 @@ sidebar:
 | 功成事遂               |  | When her work is complete and her job is finished,
 | 百姓皆谓我自然         |  | Everybody says: “We did it!”
 
-{% include kipisi-nav.html num=17 %}
+{% include kasi-nav.html num=17 %}
 
 -------
 {:#sitelen}
