--- a/lipu-nasin-pona/2.md
+++ b/lipu-nasin-pona/2.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa tu • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa tu • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa wan](1)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 3](3)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa wan](1)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 3](3)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -31,7 +31,7 @@ sidebar:
 | 夫唯弗居               | jan wan anu seme?                                           | It is precisely because she does not abide in them
 | 是以不去               | ni la, tawa ala.                                            | That they never leave her.
 
-{% include kipisi-nav.html num=2 %}
+{% include kasi-nav.html num=2 %}
 
 -------
 {:#sitelen}
