--- a/lipu-nasin-pona/21.md
+++ b/lipu-nasin-pona/21.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 21 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 21 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 20](20)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 22](22)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 20](20)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 22](22)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -22,7 +22,7 @@ sidebar:
 | 吾何以知众甫之状哉 |  | How do I know the form of all origins?
 | 以此 |  | By this.
 
-{% include kipisi-nav.html num=21 %}
+{% include kasi-nav.html num=21 %}
 
 -------
 {:#sitelen}
