--- a/lipu-nasin-pona/23.md
+++ b/lipu-nasin-pona/23.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 23 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 23 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 22](22)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 24](24)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 22](22)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 24](24)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -27,7 +27,7 @@ sidebar:
 | 同于失者<wbr/>失亦乐得之 |  | Loss also accepts accordance gladly.
 | 信不足<wbr/>焉有不信焉   |  | If you are untrustworthy, people will not trust you.
 
-{% include kipisi-nav.html num=23 %}
+{% include kasi-nav.html num=23 %}
 
 -------
 {:#sitelen}
