--- a/lipu-nasin-pona/24.md
+++ b/lipu-nasin-pona/24.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 24 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 24 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 23](23)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 25](25)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 23](23)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 25](25)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -23,7 +23,7 @@ sidebar:
 | 物或恶之         |  | And all things dislike them.
 | 故有道者不处     |  | Therefore the person of the Way does not act like this.
 
-{% include kipisi-nav.html num=24 %}
+{% include kasi-nav.html num=24 %}
 
 -------
 {:#sitelen}
