--- a/lipu-nasin-pona/25.md
+++ b/lipu-nasin-pona/25.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 25 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 25 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 24](24)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 26](26)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 24](24)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 26](26)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -31,7 +31,7 @@ sidebar:
 | 天法道                       |  | Heaven follows the Way
 | 道法自然                     |  | The Way follows things as they are.
 
-{% include kipisi-nav.html num=25 %}
+{% include kasi-nav.html num=25 %}
 
 -------
 {:#sitelen}
