--- a/lipu-nasin-pona/3.md
+++ b/lipu-nasin-pona/3.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 3 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 3 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa tu](2)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 4](4)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa tu](2)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 4](4)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -24,7 +24,7 @@ sidebar:
 | 使夫知者<wbr/>不敢为也       | jan suno li wile ala nasin.                              | It will make the intellectuals not dare to meddle.
 | 为无为<wbr/>则无不治         | pali e pali ala la: ken lawa e ilo ale.                  | Acting without contrivance, there is no lack of manageability.
 
-{% include kipisi-nav.html num=3 %}
+{% include kasi-nav.html num=3 %}
 
 -------
 {:#sitelen}
