--- a/lipu-nasin-pona/32.md
+++ b/lipu-nasin-pona/32.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 32 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 32 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 31](31)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 33](33)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 31](31)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 33](33)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -29,7 +29,7 @@ sidebar:
 
 [^1] This triplet of characters may have been added by a later commenter?
 
-{% include kipisi-nav.html num=32 %}
+{% include kasi-nav.html num=32 %}
 
 -------
 {:#sitelen}
