--- a/lipu-nasin-pona/33.md
+++ b/lipu-nasin-pona/33.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 33 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 33 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 32](32)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 34](34)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 32](32)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 34](34)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -21,7 +21,7 @@ sidebar:
 | 不失其所者久 |  | If you don't lose your objectives[,]<wbr/> you can be long-lasting.
 | 死而不亡者寿 |  | If you die without loss,<wbr/> you are eternal.
 
-{% include kipisi-nav.html num=33 %}
+{% include kasi-nav.html num=33 %}
 
 -------
 {:#sitelen}
