--- a/lipu-nasin-pona/36.md
+++ b/lipu-nasin-pona/36.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 36 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 36 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 35](35)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 37](37)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 35](35)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 37](37)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -26,7 +26,7 @@ sidebar:
 | 国之利器     |                              | The country's potent weapons
 | 不可以示人   |                              | Should not be shown to its people.
 
-{% include kipisi-nav.html num=36 %}
+{% include kasi-nav.html num=36 %}
 
 -------
 {:#sitelen}
