--- a/lipu-nasin-pona/37.md
+++ b/lipu-nasin-pona/37.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 37 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 37 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 36](36)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 38](38)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 36](36)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 38](38)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -23,7 +23,7 @@ sidebar:
 | 不欲以静 |  | Desireless, they are tranquil and
 | 天下将自定 |  | All-under-Heaven is naturally settled.
 
-{% include kipisi-nav.html num=37 %}
+{% include kasi-nav.html num=37 %}
 
 -------
 {:#sitelen}
