--- a/lipu-nasin-pona/38.md
+++ b/lipu-nasin-pona/38.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 38 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 38 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 37](37)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 39](39)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 37](37)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 39](39)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -39,7 +39,7 @@ sidebar:
 | 处其实<wbr/>不居其华   |  | Rests in the fruit and not in the flower.
 | 故去彼取此             | la o weka. o jo e ni. | So let go of that and grasp this.
 
-{% include kipisi-nav.html num=38 %}
+{% include kasi-nav.html num=38 %}
 
 -------
 {:#sitelen}
