--- a/lipu-nasin-pona/39.md
+++ b/lipu-nasin-pona/39.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 39 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 39 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 38](38)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 40](40)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 38](38)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 40](40)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -35,7 +35,7 @@ sidebar:
 | 不欲琭琭如玉             |  | Not desiring the rarity of gems
 | 珞珞如石                 |  | Or the manyness of grains of sand.
 
-{% include kipisi-nav.html num=39 %}
+{% include kasi-nav.html num=39 %}
 
 -------
 {:#sitelen}
