--- a/lipu-nasin-pona/4.md
+++ b/lipu-nasin-pona/4.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 4 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 4 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 3](3)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 5](5)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 3](3)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 5](5)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -24,7 +24,7 @@ sidebar:
 | 吾不知<wbr/>谁之子    | mi suno ala la: seme li mama ona?                        | It is the child of I-don't-know-who.
 | 象帝之先              | ona li mama e jan lawa wawa.                             | And prior to the primeval Lord-on-high.
 
-{% include kipisi-nav.html num=4 %}
+{% include kasi-nav.html num=4 %}
 
 -------
 {:#sitelen}
