--- a/lipu-nasin-pona/41.md
+++ b/lipu-nasin-pona/41.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 41 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 41 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 40](40)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 42](42)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 40](40)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 42](42)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -34,7 +34,7 @@ sidebar:
 | 道隐无名 |  | The Way is hidden and nameless.
 | 夫唯道<wbr/>善贷且成 |  | This is exactly why the Way is good at developing and perfecting.
 
-{% include kipisi-nav.html num=41 %}
+{% include kasi-nav.html num=41 %}
 
 -------
 {:#sitelen}
