--- a/lipu-nasin-pona/43.md
+++ b/lipu-nasin-pona/43.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 43 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 43 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 42](42)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 44](44)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 42](42)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 44](44)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -19,7 +19,7 @@ sidebar:
 | 不言之教<wbr/>无为之益 |  | The wordless teaching and unattached-action
 | 天下希及之             |  | Are rarely seen.
 
-{% include kipisi-nav.html num=43 %}
+{% include kasi-nav.html num=43 %}
 
 -------
 {:#sitelen}
