--- a/lipu-nasin-pona/44.md
+++ b/lipu-nasin-pona/44.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 44 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 44 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 43](43)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 45](45)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 43](43)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 45](45)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -21,7 +21,7 @@ sidebar:
 | 知止不殆       |  | Knowing where to stop, you will not be imperiled
 | 可以长久       |  | And can be long-lasting.
 
-{% include kipisi-nav.html num=44 %}
+{% include kasi-nav.html num=44 %}
 
 -------
 {:#sitelen}
