--- a/lipu-nasin-pona/45.md
+++ b/lipu-nasin-pona/45.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 45 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 45 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 44](44)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 46](46)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 44](44)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 46](46)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -20,7 +20,7 @@ sidebar:
 | 躁胜寒静胜热           |  | Excitement overcomes cold, stillness overcomes heat.
 | 清静为天下正           |  | Clarity and stillness set everything right.
 
-{% include kipisi-nav.html num=45 %}
+{% include kasi-nav.html num=45 %}
 
 -------
 {:#sitelen}
