--- a/lipu-nasin-pona/47.md
+++ b/lipu-nasin-pona/47.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 47 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 47 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 46](46)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 48](48)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 46](46)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 48](48)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -22,7 +22,7 @@ sidebar:
 
 [^1]: Miller: "The commentarial tradition reads 名 as meaning 明."
 
-{% include kipisi-nav.html num=47 %}
+{% include kasi-nav.html num=47 %}
 
 -------
 {:#sitelen}
