--- a/lipu-nasin-pona/50.md
+++ b/lipu-nasin-pona/50.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 50 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 50 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 49](49)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 51](51)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 49](49)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 51](51)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -27,7 +27,7 @@ sidebar:
 | 夫何故             |                 | Why?
 | 以其无死地         |                 | Because he has no death-ground.
 
-{% include kipisi-nav.html num=50 %}
+{% include kasi-nav.html num=50 %}
 
 -------
 {:#sitelen}
