--- a/lipu-nasin-pona/52.md
+++ b/lipu-nasin-pona/52.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 52 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 52 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 51](51)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 53](53)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 51](51)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 53](53)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -28,7 +28,7 @@ sidebar:
 | 无遗身殃                 |  | Don't bring harm to yourself.
 | 是为习常                 |  | This is called “practicing the eternal.”
 
-{% include kipisi-nav.html num=52 %}
+{% include kasi-nav.html num=52 %}
 
 -------
 {:#sitelen}
