--- a/lipu-nasin-pona/53.md
+++ b/lipu-nasin-pona/53.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 53 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 53 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 52](52)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 54](54)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 52](52)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 54](54)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -26,7 +26,7 @@ sidebar:
 | 是谓盗夸     |  | They are called thieving braggarts.
 | 非道也哉     |  | This is definitely not the Way.
 
-{% include kipisi-nav.html num=53 %}
+{% include kasi-nav.html num=53 %}
 
 -------
 {:#sitelen}
