--- a/lipu-nasin-pona/55.md
+++ b/lipu-nasin-pona/55.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 55 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 55 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 54](54)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 56](56)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 54](54)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 56](56)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -33,7 +33,7 @@ sidebar:
 | 谓之不道     |                               | This is called the non-Way.
 | 不道早已     |                               | The non-Way expires quickly.
 
-{% include kipisi-nav.html num=55 %}
+{% include kasi-nav.html num=55 %}
 
 -------
 {:#sitelen}
