--- a/lipu-nasin-pona/56.md
+++ b/lipu-nasin-pona/56.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 56 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 56 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 55](55)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 57](57)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 55](55)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 57](57)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -25,7 +25,7 @@ sidebar:
 | 不可得而贱         |  | And [though you cannot possess it, you are] humbled by it.
 | 故为天下贵         |  | Therefore the world values you.
 
-{% include kipisi-nav.html num=56 %}
+{% include kasi-nav.html num=56 %}
 
 -------
 {:#sitelen}
