--- a/lipu-nasin-pona/57.md
+++ b/lipu-nasin-pona/57.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 57 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 57 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 56](56)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 58](58)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 56](56)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 58](58)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -31,7 +31,7 @@ sidebar:
 | 我无事<wbr/>而民自富 |  | I do not interfere and the people enrich themselves.
 | 我无欲<wbr/>而民自朴 |  | I have no desires<br/> And the people find their original mind.
 
-{% include kipisi-nav.html num=57 %}
+{% include kasi-nav.html num=57 %}
 
 -------
 {:#sitelen}
