--- a/lipu-nasin-pona/6.md
+++ b/lipu-nasin-pona/6.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 6 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 6 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 5](5)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 7](7)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 5](5)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 7](7)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -19,7 +19,7 @@ sidebar:
 | 系系若存     | _linja linja li sama awen._      | Continuous, seeming to remain.
 | 用之不勤     | kepeken taso pali ala.           | Use it without exertion.
 
-{% include kipisi-nav.html num=6 %}
+{% include kasi-nav.html num=6 %}
 
 -------
 {:#sitelen}
