--- a/lipu-nasin-pona/60.md
+++ b/lipu-nasin-pona/60.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 60 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 60 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 59](59)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 61](61)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 59](59)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 61](61)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -27,7 +27,7 @@ sidebar:
 [^6]: [Muller:] "Translated elsewhere as “numinousity,” “spiritual power,” etc."
 [^7]: [Muller:] "The interpretation of this final line varies widely among translators; we decided to try to remain terse and close to the literal meaning here."
 
-{% include kipisi-nav.html num=60 %}
+{% include kasi-nav.html num=60 %}
 
 -------
 {:#sitelen}
