--- a/lipu-nasin-pona/66.md
+++ b/lipu-nasin-pona/66.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 66 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 66 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 65](65)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 67](67)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 65](65)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 67](67)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -27,7 +27,7 @@ sidebar:
 | 以其不争                   |  | Since he does not contend
 | 故天下<wbr/>莫能与之争     |  | No one can contend with him.
 
-{% include kipisi-nav.html num=66 %}
+{% include kasi-nav.html num=66 %}
 
 -------
 {:#sitelen}
