--- a/lipu-nasin-pona/68.md
+++ b/lipu-nasin-pona/68.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 68 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 68 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 67](67)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 69](69)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 67](67)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 69](69)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -20,7 +20,7 @@ sidebar:
 | 是谓<wbr/>用人之力   | nimi ni li wawa Pali Jan. | It is called the ability to engage people's talents.
 | 是谓<wbr/>配天古之极 | nimi ni li ______ Wan Sewi. | It is called the ultimate in merging with Heaven.
 
-{% include kipisi-nav.html num=68 %}
+{% include kasi-nav.html num=68 %}
 
 -------
 {:#sitelen}
