--- a/lipu-nasin-pona/69.md
+++ b/lipu-nasin-pona/69.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 69 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 69 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 68](68)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 70](70)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 68](68)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 70](70)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -26,7 +26,7 @@ sidebar:
 | 兵相加               |  | When opponents clash
 | 哀者胜矣             |  | The one who is sorry about it will be the winner.
 
-{% include kipisi-nav.html num=69 %}
+{% include kasi-nav.html num=69 %}
 
 -------
 {:#sitelen}
