--- a/lipu-nasin-pona/70.md
+++ b/lipu-nasin-pona/70.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 70 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 70 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 69](69)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 71](71)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 69](69)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 71](71)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -25,7 +25,7 @@ sidebar:
 | 是以<wbr/>圣人<wbr/>被褐 |  | Therefore the sage wears coarse clothes.
 | 怀玉       |  | Yet hides a jewel in his bosom.
 
-{% include kipisi-nav.html num=70 %}
+{% include kasi-nav.html num=70 %}
 
 -------
 {:#sitelen}
