--- a/lipu-nasin-pona/72.md
+++ b/lipu-nasin-pona/72.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 72 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 72 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 71](71)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 73](73)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 71](71)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 73](73)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -24,7 +24,7 @@ sidebar:
 | 故去彼 |  | Therefore she lets go of that
 | 取此 |  | And takes this.
 
-{% include kipisi-nav.html num=72 %}
+{% include kasi-nav.html num=72 %}
 
 -------
 {:#sitelen}
