--- a/lipu-nasin-pona/73.md
+++ b/lipu-nasin-pona/73.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 73 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 73 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 72](72)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 74](74)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 72](72)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 74](74)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -24,7 +24,7 @@ sidebar:
 | 天网恢恢               |  | Heaven's net is vast.
 | 疏而不失               |  | It is loose. Yet nothing slips through.
 
-{% include kipisi-nav.html num=73 %}
+{% include kasi-nav.html num=73 %}
 
 -------
 {:#sitelen}
