--- a/lipu-nasin-pona/74.md
+++ b/lipu-nasin-pona/74.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 74 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 74 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 73](73)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 75](75)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 73](73)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 75](75)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -23,7 +23,7 @@ sidebar:
 | 是大匠斫<wbr/>夫代大匠斫者 |  | It is like cutting wood in the capacity of Master Carpenter.
 | 希有不伤其手矣 |  | There are few who will not cut their hands.
 
-{% include kipisi-nav.html num=74 %}
+{% include kasi-nav.html num=74 %}
 
 -------
 {:#sitelen}
