--- a/lipu-nasin-pona/76.md
+++ b/lipu-nasin-pona/76.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 76 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 76 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 75](75)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 77](77)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 75](75)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 77](77)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -23,7 +23,7 @@ sidebar:
 | 强大处下           | ona kiwen e ona suli li anpa.                                 | The hard and big are lesser,
 | 柔弱处上           | ona kon e ona suwi li wawa.                                   | The gentle and soft are greater.
 
-{% include kipisi-nav.html num=76 %}
+{% include kasi-nav.html num=76 %}
 
 -------
 {:#sitelen}
