--- a/lipu-nasin-pona/8.md
+++ b/lipu-nasin-pona/8.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 8 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 8 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 7](7)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 9](9)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 7](7)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 9](9)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -25,7 +25,7 @@ sidebar:
 | 动善时               | pali pona li tan tenpo.                    | [uninterpreted]
 | 夫唯不争<wbr/>故无尤 | jan li wile ala la: jan ante li _monsuta_ ala e ona. | If you do not wrangle, you will not be blamed.
 
-{% include kipisi-nav.html num=8 %}
+{% include kasi-nav.html num=8 %}
 
 -------
 {:#sitelen}
