--- a/lipu-nasin-pona/81.md
+++ b/lipu-nasin-pona/81.md
@@ -1,12 +1,12 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 81 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 81 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 80](80)
-      * [kipisi ale](index)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 80](80)
+      * [kasi ale](index)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -23,7 +23,7 @@ sidebar:
 | 天之道利而不害   | nasin sewi la, jan li pona li pakala ala.   | The way of Heaven is to help and not harm.
 | 圣人之道为而不争 | nasin jan sewi la, jan li pali li wile ala. | The way of the Sage is to act without wrangling.
 
-{% include kipisi-nav.html num=81 %}
+{% include kasi-nav.html num=81 %}
 
 -------
 {:#sitelen}
