--- a/lipu-nasin-pona/1.md
+++ b/lipu-nasin-pona/1.md
@@ -1,12 +1,12 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa wan • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa wan • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa tu](2)
-      {:.kipisi-nav-sidebar}
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa tu](2)
+      {:.kasi-nav-sidebar}
 ---
 
 
@@ -24,7 +24,7 @@ sidebar:
 | 玄之又玄               | weka sona li sama ni.                                        | Mystery within mystery;
 | 众妙之门               | ni li open e nasa wawa mute.                                 | The door to all marvels.
 
-{% include kipisi-nav.html num=1 %}
+{% include kasi-nav.html num=1 %}
 
 -------
 {:#sitelen}
