--- a/lipu-nasin-pona/10.md
+++ b/lipu-nasin-pona/10.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 10 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 10 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 9](9)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 11](11)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 9](9)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 11](11)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -30,7 +30,7 @@ sidebar:
 | 长而不宰   |  | Excel, but don't take charge.
 | 是谓玄德   |  | This is called Mysterious Virtue.
 
-{% include kipisi-nav.html num=10 %}
+{% include kasi-nav.html num=10 %}
 
 -------
 {:#sitelen}
