--- a/lipu-nasin-pona/11.md
+++ b/lipu-nasin-pona/11.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 11 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 11 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 10](10)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 12](12)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 10](10)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 12](12)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -21,7 +21,7 @@ sidebar:
 | 故<wbr/>有之以为利   | _tan pona ona_ la, jan li kepeken e _ijo lon_.                   | Therefore, what is present is used for profit.
 | 无之以为用           | _tan pali ona_ la, jan li kepeken e _weka_.                      | But it is in absence that there is usefulness.
 
-{% include kipisi-nav.html num=11 %}
+{% include kasi-nav.html num=11 %}
 
 -------
 {:#sitelen}
