--- a/lipu-nasin-pona/15.md
+++ b/lipu-nasin-pona/15.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 15 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 15 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 14](14)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 16](16)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 14](14)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 16](16)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -31,7 +31,7 @@ sidebar:
 | 夫唯不盈           |  | He can be shattered
 | 故能蔽不新成       |  | And do without quick restitution.
 
-{% include kipisi-nav.html num=15 %}
+{% include kasi-nav.html num=15 %}
 
 -------
 {:#sitelen}
