--- a/lipu-nasin-pona/18.md
+++ b/lipu-nasin-pona/18.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 18 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 18 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 17](17)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 19](19)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 17](17)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 19](19)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -21,7 +21,7 @@ sidebar:
 | 国家昏乱 |  | When the country is in chaos
 | 有忠臣   |  | Loyal ministers appear.
 
-{% include kipisi-nav.html num=18 %}
+{% include kasi-nav.html num=18 %}
 
 -------
 {:#sitelen}
