--- a/lipu-nasin-pona/19.md
+++ b/lipu-nasin-pona/19.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 19 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 19 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 18](18)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 20](20)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 18](18)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 20](20)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -20,7 +20,7 @@ sidebar:
 | 见素抱朴  |  | See the origin and keep the non-differentiated state.
 | 少私寡欲  |  | Lessen selfishness and decrease desire.
 
-{% include kipisi-nav.html num=19 %}
+{% include kasi-nav.html num=19 %}
 
 -------
 {:#sitelen}
