--- a/lipu-nasin-pona/20.md
+++ b/lipu-nasin-pona/20.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 20 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 20 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 19](19)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 21](21)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 19](19)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 21](21)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -38,7 +38,7 @@ sidebar:
 | 我独异于人             |  | I alone differ from people.
 | 而贵食母               |  | I enjoy being nourished by the mother.
 
-{% include kipisi-nav.html num=20 %}
+{% include kasi-nav.html num=20 %}
 
 -------
 {:#sitelen}
