--- a/lipu-nasin-pona/22.md
+++ b/lipu-nasin-pona/22.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 22 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 22 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 21](21)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 23](23)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 21](21)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 23](23)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -27,7 +27,7 @@ sidebar:
 | 古之所谓<wbr/>曲则全者<wbr/>岂虚言哉 |  | How could the ancient saying, “The imperfect is completed” be regarded as empty talk?
 | 诚全而归之                           |  | Believe in the complete and return to it.
 
-{% include kipisi-nav.html num=22 %}
+{% include kasi-nav.html num=22 %}
 
 -------
 {:#sitelen}
