--- a/lipu-nasin-pona/26.md
+++ b/lipu-nasin-pona/26.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 26 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 26 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 25](25)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 27](27)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 25](25)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 27](27)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -24,7 +24,7 @@ sidebar:
 | 轻则失本             |  | If you take them lightly you will lose your roots.
 | 躁则失君             |  | If you are unstable, you will lose your rulership.
 
-{% include kipisi-nav.html num=26 %}
+{% include kasi-nav.html num=26 %}
 
 -------
 {:#sitelen}
