--- a/lipu-nasin-pona/27.md
+++ b/lipu-nasin-pona/27.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 27 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 27 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 26](26)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 28](28)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 26](26)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 28](28)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -28,7 +28,7 @@ sidebar:
 | 虽智大迷                 |  | Even if you are smart, you are gravely in error.
 | 是谓要妙                 |  | This is called Essential Subtlety.
 
-{% include kipisi-nav.html num=27 %}
+{% include kasi-nav.html num=27 %}
 
 -------
 {:#sitelen}
