--- a/lipu-nasin-pona/28.md
+++ b/lipu-nasin-pona/28.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 28 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 28 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 27](27)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 29](29)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 27](27)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 29](29)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -33,7 +33,7 @@ sidebar:
 
 [^1]: [Miller:] The “black” is the deep, religious, mystic part of our experience. The “white” is our involvement in mundane affairs. We should well understand how the conventional world operates, but our priority should lie in adhering to deeper principles.
 
-{% include kipisi-nav.html num=28 %}
+{% include kasi-nav.html num=28 %}
 
 -------
 {:#sitelen}
