--- a/lipu-nasin-pona/29.md
+++ b/lipu-nasin-pona/29.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 29 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 29 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 28](28)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 30](30)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 28](28)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 30](30)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -26,7 +26,7 @@ sidebar:
 | 去奢                   |  | Shuns grandiosity
 | 去泰                   |  | Shuns arrogance.
 
-{% include kipisi-nav.html num=29 %}
+{% include kasi-nav.html num=29 %}
 
 -------
 {:#sitelen}
