--- a/lipu-nasin-pona/30.md
+++ b/lipu-nasin-pona/30.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 30 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 30 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 29](29)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 31](31)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 29](29)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 31](31)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -30,7 +30,7 @@ sidebar:
 | 是谓不道     |  | This is called non-Way
 | 不道早已     |  | The non-Way is short-lived.
 
-{% include kipisi-nav.html num=30 %}
+{% include kasi-nav.html num=30 %}
 
 -------
 {:#sitelen}
