--- a/lipu-nasin-pona/31.md
+++ b/lipu-nasin-pona/31.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 31 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 31 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 30](30)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 32](32)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 30](30)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 32](32)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -35,7 +35,7 @@ sidebar:
 | 以哀悲泣之                 |  | Weep in lamentation.
 | 战胜以丧礼处之             |  | The victors bury them with funerary rites.
 
-{% include kipisi-nav.html num=31 %}
+{% include kasi-nav.html num=31 %}
 
 -------
 {:#sitelen}
