--- a/lipu-nasin-pona/34.md
+++ b/lipu-nasin-pona/34.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 34 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 34 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 33](33)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 35](35)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 33](33)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 35](35)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -22,7 +22,7 @@ sidebar:
 | 以其终不自为大           |  | Till the end, it does not regard itself as Great.
 | 故能成其大               |  | Therefore it able to be great.
 
-{% include kipisi-nav.html num=34 %}
+{% include kasi-nav.html num=34 %}
 
 -------
 {:#sitelen}
