--- a/lipu-nasin-pona/35.md
+++ b/lipu-nasin-pona/35.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 35 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 35 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 34](34)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 36](36)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 34](34)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 36](36)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -24,7 +24,7 @@ sidebar:
 
 [^1]: [Miller:] "As far as I can tell, I am the only translator who takes 往 as “going forth” rather than “come.” Where in any other text do we see the rendering of “come”? I take it to mean that if people will hold on to the Dao as they go out in the world, they won't have trouble, and will enjoy peace and calm. This seems to accord with the general message of the Daodejing."
 
-{% include kipisi-nav.html num=35 %}
+{% include kasi-nav.html num=35 %}
 
 -------
 {:#sitelen}
