--- a/lipu-nasin-pona/40.md
+++ b/lipu-nasin-pona/40.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 40 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 40 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 39](39)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 41](41)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 39](39)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 41](41)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -17,7 +17,7 @@ sidebar:
 | 天下万物<wbr/>生于有 |  | All things in the cosmos arise from being.
 | 有生于无       |  | Being arises from non-being.
 
-{% include kipisi-nav.html num=40 %}
+{% include kasi-nav.html num=40 %}
 
 -------
 {:#sitelen}
