--- a/lipu-nasin-pona/42.md
+++ b/lipu-nasin-pona/42.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 42 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 42 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 41](41)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 43](43)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 41](41)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 43](43)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -26,7 +26,7 @@ sidebar:
 | 强梁者不得其死       |  | “The forceful do not choose their place of death.”
 | 吾将以为教父         |  | I regard this as the father of all teachings.
 
-{% include kipisi-nav.html num=42 %}
+{% include kasi-nav.html num=42 %}
 
 -------
 {:#sitelen}
