--- a/lipu-nasin-pona/46.md
+++ b/lipu-nasin-pona/46.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 46 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 46 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 45](45)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 47](47)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 45](45)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 47](47)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -20,7 +20,7 @@ sidebar:
 | 咎莫大于欲得   |  | No greater than not wanting more.
 | 故知足之足<wbr/>常足矣 |  | Therefore the sufficiency that comes from knowing what is enough is an eternal sufficiency.
 
-{% include kipisi-nav.html num=46 %}
+{% include kasi-nav.html num=46 %}
 
 -------
 {:#sitelen}
