--- a/lipu-nasin-pona/48.md
+++ b/lipu-nasin-pona/48.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 48 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 48 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 47](47)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 49](49)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 47](47)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 49](49)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -21,7 +21,7 @@ sidebar:
 | 及其有事       |  | No matter how much you manipulate
 | 不足以取天下   |  | You can never possess the world.
 
-{% include kipisi-nav.html num=48 %}
+{% include kasi-nav.html num=48 %}
 
 -------
 {:#sitelen}
