--- a/lipu-nasin-pona/49.md
+++ b/lipu-nasin-pona/49.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 49 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 49 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 48](48)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 50](50)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 48](48)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 50](50)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -22,7 +22,7 @@ sidebar:
 | 百姓皆注其耳目 |  | And conceals her mind for them.
 | 圣人皆孩之     |  | The sages treat them as their little children.
 
-{% include kipisi-nav.html num=49 %}
+{% include kasi-nav.html num=49 %}
 
 -------
 {:#sitelen}
