--- a/lipu-nasin-pona/5.md
+++ b/lipu-nasin-pona/5.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 5 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 5 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 4](4)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 6](6)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 4](4)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 6](6)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -22,7 +22,7 @@ sidebar:
 | 多言数穷                | nimi mute li nanpa ike.                    | Excessive verbiage is usually a dead end
 | 不如守中                | pona la, awen e insa.                      | Is not as good as holding to the center.
 
-{% include kipisi-nav.html num=5 %}
+{% include kasi-nav.html num=5 %}
 
 -------
 {:#sitelen}
