--- a/lipu-nasin-pona/51.md
+++ b/lipu-nasin-pona/51.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 51 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 51 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 50](50)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 52](52)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 50](50)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 52](52)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -26,7 +26,7 @@ sidebar:
 | 长而不宰                               |  | Leads without forcing.
 | 是谓玄德                               |  | This is called “Mysterious Virtue.”
 
-{% include kipisi-nav.html num=51 %}
+{% include kasi-nav.html num=51 %}
 
 -------
 {:#sitelen}
