--- a/lipu-nasin-pona/54.md
+++ b/lipu-nasin-pona/54.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 54 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 54 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 53](53)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 55](55)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 53](53)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 55](55)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -28,7 +28,7 @@ sidebar:
 | 吾何以知天下然哉 |         | How do I know the world as it is?
 | 以此             | tan ni. | By this.
 
-{% include kipisi-nav.html num=54 %}
+{% include kasi-nav.html num=54 %}
 
 -------
 {:#sitelen}
