--- a/lipu-nasin-pona/58.md
+++ b/lipu-nasin-pona/58.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 58 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 58 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 57](57)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 59](59)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 57](57)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 59](59)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -28,7 +28,7 @@ sidebar:
 | 直而不肆     |  | Straightens without lining up.
 | 光而不耀     |  | Shines but does not glare.
 
-{% include kipisi-nav.html num=58 %}
+{% include kasi-nav.html num=58 %}
 
 -------
 {:#sitelen}
