--- a/lipu-nasin-pona/59.md
+++ b/lipu-nasin-pona/59.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 59 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 59 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 58](58)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 60](60)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 58](58)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 60](60)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -26,7 +26,7 @@ sidebar:
 | 是谓深根固柢         |  | This is called “planting the roots deeply and firmly.”
 | 长生久视之道         |  | The way to long life and eternal vision.
 
-{% include kipisi-nav.html num=59 %}
+{% include kasi-nav.html num=59 %}
 
 -------
 {:#sitelen}
