--- a/lipu-nasin-pona/61.md
+++ b/lipu-nasin-pona/61.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 61 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 61 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 60](60)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 62](62)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 60](60)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 62](62)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -30,7 +30,7 @@ sidebar:
 | 夫两者<wbr/>各得其所欲 |  | Thus both get what they want.
 | 大者宜为下             |  | Greatness lies in placing oneself below.
 
-{% include kipisi-nav.html num=61 %}
+{% include kasi-nav.html num=61 %}
 
 -------
 {:#sitelen}
