--- a/lipu-nasin-pona/62.md
+++ b/lipu-nasin-pona/62.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 62 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 62 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 61](61)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 63](63)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 61](61)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 63](63)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -26,7 +26,7 @@ sidebar:
 | 有罪以免耶             |  | Or to have punishments to deter crime.
 | 故为天下贵             |  | Therefore it is the most prized in the world.
 
-{% include kipisi-nav.html num=62 %}
+{% include kasi-nav.html num=62 %}
 
 -------
 {:#sitelen}
