--- a/lipu-nasin-pona/63.md
+++ b/lipu-nasin-pona/63.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 63 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 63 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 62](62)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 64](64)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 62](62)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 64](64)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -30,7 +30,7 @@ sidebar:
 | 是以圣人<wbr/>犹难之   |  | Therefore the sage treats things as though they were difficult,
 | 故终无难矣             |  | And hence, never has difficulty.
 
-{% include kipisi-nav.html num=63 %}
+{% include kasi-nav.html num=63 %}
 
 -------
 {:#sitelen}
