--- a/lipu-nasin-pona/64.md
+++ b/lipu-nasin-pona/64.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 64 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 64 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 63](63)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 65](65)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 63](63)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 65](65)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -37,7 +37,7 @@ sidebar:
 | 以辅万物之自然         |  | And aid all things in manifesting their true nature
 | 而不敢为               |  | Without presuming to take the initiative.
 
-{% include kipisi-nav.html num=64 %}
+{% include kasi-nav.html num=64 %}
 
 -------
 {:#sitelen}
