--- a/lipu-nasin-pona/65.md
+++ b/lipu-nasin-pona/65.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 65 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 65 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 64](64)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 66](66)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 64](64)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 66](66)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -28,7 +28,7 @@ sidebar:
 | 与物反矣           | ijo ale li sin kama. | It makes all return
 | 然后乃至大顺       |  | Until they reach the Great Norm.
 
-{% include kipisi-nav.html num=65 %}
+{% include kasi-nav.html num=65 %}
 
 -------
 {:#sitelen}
