--- a/lipu-nasin-pona/67.md
+++ b/lipu-nasin-pona/67.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 67 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 67 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 66](66)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 68](68)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 66](66)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 68](68)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -35,7 +35,7 @@ sidebar:
 | 天将救之         |  | Heaven will take care of you,
 | 以慈卫之         |  | Protecting you with compassion.
 
-{% include kipisi-nav.html num=67 %}
+{% include kasi-nav.html num=67 %}
 
 -------
 {:#sitelen}
