--- a/lipu-nasin-pona/7.md
+++ b/lipu-nasin-pona/7.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 7 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 7 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 6](6)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 8](8)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 6](6)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 8](8)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -21,7 +21,7 @@ sidebar:
 | 非以其无私耶               | tan ala anu seme? pilin insa ona li len ala,                   | Is it not through her selflessness
 | 故能成其私                 | la— ona li ken pona e pilin insa!                              | That she is able to perfect herself?
 
-{% include kipisi-nav.html num=7 %}
+{% include kasi-nav.html num=7 %}
 
 -------
 {:#sitelen}
