--- a/lipu-nasin-pona/75.md
+++ b/lipu-nasin-pona/75.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 75 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 75 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 74](74)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 76](76)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 74](74)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 76](76)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -24,7 +24,7 @@ sidebar:
 | 夫唯无以生为者       |  | It is only by not living for your own ends
 | 是贤于贵生           |  | That you can go beyond valuing life.
 
-{% include kipisi-nav.html num=75 %}
+{% include kasi-nav.html num=75 %}
 
 -------
 {:#sitelen}
