--- a/lipu-nasin-pona/77.md
+++ b/lipu-nasin-pona/77.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 77 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 77 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 76](76)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 78](78)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 76](76)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 78](78)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -30,7 +30,7 @@ sidebar:
 | 功成而不处             |  | Does not abide in his accomplishments.
 | 其不欲见贤             |  | Does not want to show his virtue.
 
-{% include kipisi-nav.html num=77 %}
+{% include kasi-nav.html num=77 %}
 
 -------
 {:#sitelen}
