--- a/lipu-nasin-pona/78.md
+++ b/lipu-nasin-pona/78.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 78 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 78 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 77](77)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 79](79)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 77](77)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 79](79)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -26,7 +26,7 @@ sidebar:
 | 是谓天下王         |  | Becomes king of the world.
 | 正言若反           |  | Truth seems contradictory.
 
-{% include kipisi-nav.html num=78 %}
+{% include kasi-nav.html num=78 %}
 
 -------
 {:#sitelen}
