--- a/lipu-nasin-pona/80.md
+++ b/lipu-nasin-pona/80.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu pona la, kipisi nanpa 80 • lipu Nasin Pona
+title: lipu pona la, kasi nanpa 80 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 79](79)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 81](81)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 79](79)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 81](81)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -22,7 +22,7 @@ sidebar:
 | 邻国相望<wbr/>鸡犬之声相闻 |  | Even though the next country can be seen and its dogs and chickens can be heard,
 | 民至老死<wbr/>不相往来     |  | The people will grow old and die without visiting each other's land.
 
-{% include kipisi-nav.html num=80 %}
+{% include kasi-nav.html num=80 %}
 
 -------
 {:#sitelen}
