--- a/lipu-nasin-pona/9.md
+++ b/lipu-nasin-pona/9.md
@@ -1,13 +1,13 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 9 • lipu Nasin Pona
+title: lipu nasin la, kasi nanpa 9 • lipu Nasin Pona
 sidebar:
-  - title: "kipisi ante"
+  - title: "kasi ante"
     text: |
-      * [monsi la, <br/> kipisi nanpa 8](8)
-      * [kipisi ale](index)
-      * [sinpin la, <br/> kipisi nanpa 10](10)
-      {:.kipisi-nav-sidebar}
+      * [monsi la, <br/> kasi nanpa 8](8)
+      * [kasi ale](index)
+      * [sinpin la, <br/> kasi nanpa 10](10)
+      {:.kasi-nav-sidebar}
 ---
 
 {:.loseta}
@@ -19,7 +19,7 @@ sidebar:
 | 功遂身退               | _pali pini_ la: o lape.                                           | After finishing the work, withdraw.
 | 天之道                 | ni li nasin sewi.                                                 | This is the Way of Heaven.
 
-{% include kipisi-nav.html num=9 %}
+{% include kasi-nav.html num=9 %}
 
 -------
 {:#sitelen}
